@@ -1075,6 +1075,7 @@ void cycle_palette();
 void doHelp(int bg,int fg);
 int onshieldblockhelp();
 int onHelp();
+int onZstringshelp();
 int onZScripthelp();
 int edit_layers(mapscr* tempscr);
 void autolayer(mapscr* tempscr, int layer, int al[6][3]);
